Resolvendo ficha para espécies do Livro Vermelho.

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -27,7 +27,7 @@
         <p class='criteria'><strong>Criterio: </strong> {{assessment["criteria"]|default("N/A")}}</p>
         <p class='assessor'><strong>Avaliador: </strong> {{assessment["assessor"]}}</p>
         <p class='evaluator'><strong>Revisor: </strong> {{assessment["evaluator"]}}</p>
-        <p class='assessor'><strong>Analista(s) de Dados: </strong> {{profile["metadata"]["creator"]}}</p>
+        <p class='assessor'><strong>Analista(s) de Dados: </strong> {{analyst}}</p>
         <p class='assessor'><strong>Analista(s) SIG: </strong> {{georeferencedBy}}</p>
         <p class='assessor'><strong>Especialista(s): </strong> {{specialist}}</p>
         <br/>
