Alterando números na tela principal e inclusão de material novo sobre estratégia

--- a/templates/content/pt-br/document/livros.html
+++ b/templates/content/pt-br/document/livros.html
@@ -2,6 +2,22 @@
 <div class="doc">
     <div class="col-sm-3 col-md-3 col-lg-3">
         <div class="img">
+            <a href="{{static_url}}/pdf/planejamento/estra_conservacao_nacional_ex_situ.pdf" id="espinhaco" style="text-decoration: none;">
+            <img src="{{static_url}}/images/projetos/planejamento/capa_estrategia_nacional.png"/>
+          <div class="portfolio-overlay">
+            <p style="line-height:1.5em">
+              Estratégia Nacional para Conservação Ex Situ
+              de Espécies Ameaçadas da Flora Brasileira
+            </p>
+          </div>
+        </a>
+      </div>
+    </div>
+</div>
+
+<div class="doc">
+    <div class="col-sm-3 col-md-3 col-lg-3">
+        <div class="img">
             <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/42" id="espinhaco" style="text-decoration: none;">
             <img src="{{static_url}}/images/projetos/planejamento/PAN-Espinhaco-Meridional.jpg"/>
           <div class="portfolio-overlay">
