--- a/templates/content/pt-br/livros.html
+++ b/templates/content/pt-br/livros.html
@@ -1,6 +1,21 @@
 <h3>Livros</h3>
 <div class="box-section box-project ">
     <div class="project-img col-sm-4 col-md-4 col-lg-4" >
+        <a href="{{static_url}}/pdf/planejamento/estra_conservacao_nacional_ex_situ.pdf" id="conservacao">
+            <img src="{{static_url}}/images/projetos/planejamento/capa_estrategia_nacional.png"/>
+        </a>
+    </div>
+
+    <div class="description col-sm-8 col-md-8 col-lg-8">
+        <h4>
+            <a href="https://drive.google.com/a/cncflora.net/file/d/0B9QSF949iQQtdTloOEh3b2Rvc1U/view?usp=sharing" id="espinhaco2">
+                ESTRATÉGIA NACIONAL PARA CONSERVAÇÃO EX SITU DE ESPÉCIES AMEAÇADAS DA FLORA BRASILEIRA
+            </a>
+        </h4>
+    </div>
+</div>
+<div class="box-section box-project ">
+    <div class="project-img col-sm-4 col-md-4 col-lg-4" >
         <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/46" id="espinhaco">
             <img src="{{static_url}}/images/projetos/planejamento/PAN-Espinhaco-Meridional.jpg"/>
         </a>
@@ -21,8 +36,8 @@
         sobre aspectos ambientais, socioeconômicos e
         histórico-culturais desse território alvo, bem como
         informações complementares sobre cada espécie Criticamente
-        em perigo e com Dados insuficientes, disponíveis no 
-        <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/46">Anexo</a>. 
+        em perigo e com Dados insuficientes, disponíveis no
+        <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/46">Anexo</a>.
         </p>
     </div>
 </div>
@@ -47,7 +62,7 @@
       informações sobre aspectos ambientais, socioeconômicos e
       histórico-culturais desse território, bem como informações
       complementares sobre cada espécie Criticamente em perigo e com
-      Dados insuficientes, disponíveis no 
+      Dados insuficientes, disponíveis no
       <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/45">Anexo</a>.
       </p>
   </div>
@@ -71,7 +86,7 @@
       sobre 82 espécies (64 Criticamente em perigo de extinção e 18 com Dados
       insuficientes) do Cerrado de Minas Gerais. O Guia de campo também auxilia a
       implementação de ações de conservação recomendadas nos Planos de Ação
-      Nacional - PANs. 
+      Nacional - PANs.
       </p>
   </div>
 </div>
@@ -85,26 +100,26 @@
   <div class="description col-sm-8 col-md-8 col-lg-8">
     <h4><a href="http://dspace.jbrj.gov.br/jspui/handle/doc/27" >LIVRO VERMELHO - PLANTAS RARAS DO CERRADO</a></h4>
     <p>
-    Apesar da profusão dos conceitos de raridade e das diferentes definições, é consenso 
+    Apesar da profusão dos conceitos de raridade e das diferentes definições, é consenso
 
-    que espécies raras podem apresentar uma alta vulnerabilidade e, portanto, devem ser 
+    que espécies raras podem apresentar uma alta vulnerabilidade e, portanto, devem ser
 
-    priorizadas em medidas de conservação. O Cerrado é atualmente considerado uma das 
+    priorizadas em medidas de conservação. O Cerrado é atualmente considerado uma das
 
-    áreas críticas para conservação e a perda de hábitat nesse bioma vem alcançando índices 
+    áreas críticas para conservação e a perda de hábitat nesse bioma vem alcançando índices
 
-    alarmantes. Frente aos desafios de conservar espécies ameaçadas em função da 
+    alarmantes. Frente aos desafios de conservar espécies ameaçadas em função da
 
-    destruição paulatina dos seus hábitats, o objetivo do Livro Vermelho da flora do Brasil 
+    destruição paulatina dos seus hábitats, o objetivo do Livro Vermelho da flora do Brasil
 
-    – Plantas raras do Cerrado foi avaliar o risco de extinção de espécies consideradas raras 
+    – Plantas raras do Cerrado foi avaliar o risco de extinção de espécies consideradas raras
 
-    segundo o conceito de raridade de Giulietti et al. (2009) e com ocorrência e/ou 
-    
-    endêmicas do Cerrado. Assim, a partir da avaliação do risco de extinção das plantas 
-    
-    raras do Cerrado pretende-se subsidiar estratégias para o direcionamento de esforços 
-    
+    segundo o conceito de raridade de Giulietti et al. (2009) e com ocorrência e/ou
+
+    endêmicas do Cerrado. Assim, a partir da avaliação do risco de extinção das plantas
+
+    raras do Cerrado pretende-se subsidiar estratégias para o direcionamento de esforços
+
     conservacionistas voltados as espécies mais suscetíveis à extinção iminente.
 
       </p>
@@ -163,4 +178,3 @@
     </p>
     </div>
   </div>
-
