--- a/templates/content/pt-br/project/ex-situ.html
+++ b/templates/content/pt-br/project/ex-situ.html
@@ -29,15 +29,14 @@
     </div>
 
     <div class="col-sm-3 col-md-3 col-lg-3">
-      <div class="img breve">
-        <a href="#"  data-toggle="modal" data-target="#breve-two">
-        <img src="{{static_url}}/images/projetos/ex-situ/capa_estrategia1.png"/>
+      <div class="img">
+        <a href="{{static_url}}/pdf/planejamento/estra_conservacao_nacional_ex_situ.pdf"  data-toggle="modal" data-target="#breve-two">
+        <img src="{{static_url}}/images/projetos/ex-situ/capa_estrategia_nacional.png"/>
         <div class="portfolio-overlay">
-          <br/>
           <p align="justify">
-             Em Breve<br/><br/>
-             Estratégia Nacional para conservação ex situ
+             Estratégia Nacional para a conservação ex situ da Flora Ameaçada Brasileira
           </p>
+          <br/>
           <br/>
           <p></p>
          </div>
