--- a/templates/home.html
+++ b/templates/home.html
@@ -37,7 +37,7 @@
 
           <h3 class="title-chart title-chart-one">Espécies da Flora</h3>
           <div class="box-chart chart-one">
-              <strong>46097</strong>
+              <strong>46223</strong>
               <div class="layer"></div>
           </div>
           <div class="chart-layer-one">
@@ -46,16 +46,16 @@
         <div class="col-sm-3 col-md-3 col-lg-3 box">
           <h3 class="title-chart title-chart-two">Avaliadas</h3>
           <div class="box-chart chart-two">
-              <strong>5195</strong>
+              <strong>6046</strong>
               <div class="layer"></div>
           </div>
           <div class="chart-layer-two">
           </div>
         </div>
         <div class="col-sm-3 col-md-3 col-lg-3 box">
-          <h3 class="title-chart title-chart-three">Ameaçadas</h3>
+          <h3 class="title-chart title-chart-three">Ameaçadas*</h3>
           <div class="box-chart chart-three">
-              <strong>2479</strong>
+              <strong>2953</strong>
               <div class="layer"></div>
           </div>
           <div class="chart-layer-three">
@@ -69,7 +69,16 @@
           </div>
         </div>
       </section>
-    </div>
+
+      <section class="col-sm-12 col-md-12 col-lg-12">
+        <div>
+
+          <h6><a href=""> </a></h6>
+          <p align="justify" style="font-size:15px">
+            <b>*</b>O número aqui apresentado é resultado do processo contínuo de avaliação de risco de extinção da Flora feito pelo CNCFlora em parceria com uma rede de especialistas. Porém, o número oficial de espécies ameaçadas é <u>2.113</u> que estão contempladas na "Lista Nacional Oficial de Espécies da Flora Ameaçadas de Extinção" <a href="http://cncflora.jbrj.gov.br/portal/static/pdf/portaria_mma_443_2014.pdf">(Portaria 443/2014)</a>.</p>
+        </div>
+      </section>
+
   </div>
 </section>
 
@@ -78,6 +87,21 @@
     <div class="container">
       <h3 class="col-sm-12 col-md-12 col-lg-12 title "  >Destaques</h3>
     <div class="row">
+
+      <section class="col-sm-12 col-md-12 col-lg-12">
+        <div class="box post">
+            <a href="{{static_url}}/pdf/planejamento/estra_conservacao_nacional_ex_situ.pdf" id="conservacao" style="text-decoration: none;" class="image left box-img">
+                <img src="{{static_url}}/images/projetos/planejamento/capa_estrategia_nacional.png"/>
+            </a>
+            <div class="inner">
+                <h3>
+                    <a href="https://drive.google.com/a/cncflora.net/file/d/0B9QSF949iQQtdTloOEh3b2Rvc1U/view?usp=sharing" id="conservacao2" style="text-decoration: none;">
+                        Estratégia Nacional para Conservação Ex Situ de Espécies Ameaçadas da Flora Brasileira
+                    </a>
+                </h3>
+            </div>
+        </div>
+      </section>
 
       <section class="col-sm-12 col-md-12 col-lg-12">
         <div class="box post">
