Alterando ficha das espécies.

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -75,7 +75,7 @@
         </p>
         {% endif %}
       {% endif %}
-      <h4>Mapa de distribui&ccedil;&atilde;o</h4>
+      <h4>Mapa de ocorrência</h4><a href="{{static_url}}/pdf/documentos/Metodologia_mapas_cncflora.pdf"> - Ver metodologia</a>
       <img src="http://cncflora.jbrj.gov.br/arquivos/arquivos/mapas/{{assessment["taxon"]["scientificNameWithoutAuthorship"]}}.jpg" />
     </div>
 
