Alterando links do livro de conservação ex situ para o dspace

--- a/templates/content/pt-br/project/ex-situ.html
+++ b/templates/content/pt-br/project/ex-situ.html
@@ -30,7 +30,7 @@
 
     <div class="col-sm-3 col-md-3 col-lg-3">
       <div class="img">
-        <a href="{{static_url}}/pdf/planejamento/estra_conservacao_nacional_ex_situ.pdf"  data-toggle="modal" data-target="#breve-two">
+        <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/66"  data-toggle="modal" data-target="#breve-two">
         <img src="{{static_url}}/images/projetos/ex-situ/capa_estrategia_nacional.png"/>
         <div class="portfolio-overlay">
           <p align="justify">
