--- a/templates/home.html
+++ b/templates/home.html
@@ -90,12 +90,12 @@
 
       <section class="col-sm-12 col-md-12 col-lg-12">
         <div class="box post">
-            <a href="{{static_url}}/pdf/planejamento/estra_conservacao_nacional_ex_situ.pdf" id="conservacao" style="text-decoration: none;" class="image left box-img">
+            <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/66" id="conservacao" style="text-decoration: none;" class="image left box-img">
                 <img src="{{static_url}}/images/projetos/planejamento/capa_estrategia_nacional.png"/>
             </a>
             <div class="inner">
                 <h3>
-                    <a href="https://drive.google.com/a/cncflora.net/file/d/0B9QSF949iQQtdTloOEh3b2Rvc1U/view?usp=sharing" id="conservacao2" style="text-decoration: none;">
+                    <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/66" id="conservacao2" style="text-decoration: none;">
                         Estratégia Nacional para Conservação Ex Situ de Espécies Ameaçadas da Flora Brasileira
                     </a>
                 </h3>
