--- a/templates/content/pt-br/document/livros.html
+++ b/templates/content/pt-br/document/livros.html
@@ -2,7 +2,7 @@
 <div class="doc">
     <div class="col-sm-3 col-md-3 col-lg-3">
         <div class="img">
-            <a href="{{static_url}}/pdf/planejamento/estra_conservacao_nacional_ex_situ.pdf" id="espinhaco" style="text-decoration: none;">
+            <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/66" id="espinhaco" style="text-decoration: none;">
             <img src="{{static_url}}/images/projetos/planejamento/capa_estrategia_nacional.png"/>
           <div class="portfolio-overlay">
             <p style="line-height:1.5em">
