--- a/templates/content/pt-br/livros.html
+++ b/templates/content/pt-br/livros.html
@@ -1,14 +1,14 @@
 <h3>Livros</h3>
 <div class="box-section box-project ">
     <div class="project-img col-sm-4 col-md-4 col-lg-4" >
-        <a href="{{static_url}}/pdf/planejamento/estra_conservacao_nacional_ex_situ.pdf" id="conservacao">
+        <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/66" id="conservacao">
             <img src="{{static_url}}/images/projetos/planejamento/capa_estrategia_nacional.png"/>
         </a>
     </div>
 
     <div class="description col-sm-8 col-md-8 col-lg-8">
         <h4>
-            <a href="https://drive.google.com/a/cncflora.net/file/d/0B9QSF949iQQtdTloOEh3b2Rvc1U/view?usp=sharing" id="espinhaco2">
+            <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/66" id="espinhaco2">
                 ESTRATÉGIA NACIONAL PARA CONSERVAÇÃO EX SITU DE ESPÉCIES AMEAÇADAS DA FLORA BRASILEIRA
             </a>
         </h4>
