Alterações de foto e textos

--- a/templates/content/pt-br/equipe.html
+++ b/templates/content/pt-br/equipe.html
@@ -14,7 +14,7 @@
   <h4 class="area"><strong>Coordenadora substituta / Coord. do núcleo Conservação Ex-Situ</strong></h4>
   <img src="{{static_url}}/images/equipe/Maria.jpg"/>
   <p align="justify"> É engenheira florestal, doutora em Botânica pela Escola Nacional de Botânica Tropical - ENBT (2014). É servidora na função de Tecnologista Senior III do Instituto de Pesquisa Jardim Botânico do Rio de Janeiro. Sua experiência e interesses profissionais estão relacionados a conservação, ao fortalecimento de jardins botânicos e a espécies ameaçadas. No CNCFlora desempenha a função de coordenadora substituta e  coordenadora do Núcleo Conservação Ex Situ, onde participa dos processos de elaboração de estratégias de conservação para a flora ameaçada de extinção, de organização de livros,  redação de artigos científicos e  documentos técnicos. Maria Lúcia adora viajar, reunir amigos, dançar, fazer artesanato, programas ao ar livre e um monte de outras coisas!<br/><br/>
-  <strong><a href="http://lattes.cnpq.br/0490128192133616" target="_blank">Currículo lattes</a></strong><br/>
+  <br/><strong><a href="http://lattes.cnpq.br/0490128192133616" target="_blank">Currículo lattes</a></strong><br/>
   <strong>Email:</strong> lucianova@gmail.com
   </p>
 </div>
@@ -24,7 +24,7 @@
   <h4 class="area"><strong>Coordenadora técnico-científica</strong></h4>
   <img src="{{static_url}}/images/equipe/Eline.jpg"/>
   <p align="justify"> É bióloga, doutora em Botânica (Conservação da Natureza) pela Escola Nacional de Botânica Tropical - ENBT (2013). Sua experiência e interesses profissionais estão relacionados a conservação de espécies, com enfoque no desenvolvimento de estratégias de conservação para espécies ameaçadas de extinção e em genética da conservação. No CNCFlora desempenha a função de coordenadora técnico-científica e participa de todos os processos envolvidos na elaboração de projetos e de estratégias de conservação para a flora ameaçada de extinção, da organização de eventos e de livros, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Eline adora o contato com a natureza, ir à praia, praticar Yoga, andar de bicicleta, viajar e aproveitar a companhia dos afilhados!
-  <br /><br />
+  <br /><br /><br/>
   <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4162048A7" target="_blank">Currículo lattes</a></strong><br/>
   <strong>Email:</strong> eline@cncflora.net
     </p>
@@ -92,7 +92,7 @@
   <h3>Daniel Maurenza</h3>
   <img src="{{static_url}}/images/equipe/Daniel.jpg"/>
   <p align="justify"> É biólogo, mestre em Ecologia pelo Instituto Nacional de Pesquisas da Amazônia - INPA (2007). Sua experiência concentra-se na área de botânica e ecologia, com ênfase em conservação e em ecofisiologia, estresse fisiológico, germinação e estabelecimento de plântulas. No CNCFlora divide a sua função de analista entre os Núcleos Planejamento de Ações e Conservação Ex Situ, participando de todos os processos envolvidos na elaboração de estratégias de conservação para a flora ameaçada de extinção, da organização de livros, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ele ainda é responsável por organizar e planejar as expedições à campo. Daniel adora fazer trilhas e tomar cerveja com os amigos! <br/><br/>
-  <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4732926E5" target="_blank">Currículo lattes</a></strong><br/>
+  <br/><strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4732926E5" target="_blank">Currículo lattes</a></strong><br/>
   <strong>Email:</strong> dmaurenza@cncflora.net
     </p>
 </div>
@@ -102,6 +102,15 @@
   <img src="{{static_url}}/images/equipe/Diogo.jpeg"/>
   <p align="justify"> É graduando em Análise e Desenvolvimento de Sistemas pela Universidade Estácio de Sá. Sua experiência está relacionada ao desenvolvimento de portais e aplicações para internet e servidores, a análise e modelagem de sistemas e processos, utilizando tecnologias e ferramentas de código livre (opensource). No CNCFlora desempenha a função de analista do Núcleo Sistemas, onde é responsável pela criação e desenvolvimento do portal CNCFlora, desenvolvimento de sistemas, informatização, implementação e gerenciamento de dados e infraestrutura de tecnologia.<br/><br/><br/><br/><br/>
   <strong>Email:</strong> diogo@cncflora.net
+  </p>
+</div>
+
+<div class="item">
+  <h3>Eduardo Fernandez</h3>
+  <img src="{{static_url}}/images/equipe/Duda.jpg"/>
+  <p align="justify"> É biólogo, mestre em Diversidade e Conservação de Plantas pela University of Reading, UK (2016). Sua experiência concentra-se nas áreas de botânica, ecologia da paisagem e fitogeografia, além de especialização em genética aplicada à conservação. Ainda, possui interesse em temas como biodiversidade de ecossistemas de montanhas tropicais e história evolutiva de vegetação campestre no neotrópico. No CNCFlora, desde 2010, desempenhava a função de analista do Núcleo Lista Vermelha e participava da organização e execução de expedições científicas à áreas prioritárias. Atualmente, é analista dos Núcleos Planejamento de Ações e Inventário Florístico em Áreas Prioritárias, onde participa de todos os processos envolvidos na elaboração de estratégias de conservação para a flora ameaçada de extinção, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ele ainda é responsável pela coleta e determinação do material botânico durante as expedições ao campo. Eduardo é boleiro de carteirinha, montanhista por natureza e assíduo devorador de livros das mais diferentes temáticas, principalmente filosofia e história natural.
+  <br/><strong><a href="http://lattes.cnpq.br/0339764153484153" target="_blank">Currículo lattes</a></strong><br/>
+  <strong>Email:</strong> efernandez@cncflora.jbrj.gov.br
   </p>
 </div>
 
@@ -120,7 +129,7 @@
   <h3>Fernanda Wimmer</h3>
   <img src="{{static_url}}/images/equipe/Fernanda.jpg"/>
   <p align="justify"> É geógrafa formada pela Pontifícia Universidade Católica do Rio de Janeiro - PUC/Rio (2010), com especialização em Gestão Ambiental pela COPPE/UFRJ (2011). Sua experiência concentra-se na área de sensoriamento remoto, processamento digital de imagem, geoprocessamento e prospecção de novas geotecnologias. No CNCFlora desempenha a função de analista do Núcleo Sistemas, participando da gestão da base de dados espaciais, da organização de dados e metadados espaciais, da aferição de precisão e do georreferenciamento dos registros de ocorrência, da elaboração de mapas e da realização de análises espaciais. Fernanda gosta de artes, viajar e beber com os amigos!<br/>
-    <strong><a href="http://lattes.cnpq.br/1372059298324603">Currículo lattes</a></strong><br/>
+    <br/><br/><strong><a href="http://lattes.cnpq.br/1372059298324603">Currículo lattes</a></strong><br/>
     <strong>Email:</strong> fernanda@cncflora.net
   </p>
 </div>
@@ -153,7 +162,7 @@
 <div class="item">
   <h3>Lucas Moraes</h3>
   <img src="{{static_url}}/images/equipe/Lucas_moraes.jpeg"/>
-  <p align="justify"> É biólogo (bacharel em Genética), mestrando em Genética pela Universidade Federal do Rio de Janeiro - UFRJ. Sua experiência concentra-se nas áreas de evolução molecular, filogenética, filogeografia, fotografia e edição de imagens. No CNCFlora desempenha a função de analista do Núcleo Lista Vermelha, participando de todos os processos envolvidos na análise de dados e avaliação de risco de extinção da flora brasileira, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ele ainda é curador do banco de imagens e responsável pelos registros fotográficos durante as oficinas, reuniões e expedições à campo. Lucas adora fotografar, tomar cerveja e falar sobre os grandes mistérios da humanidade! <br/><br/><br/><br/>
+  <p align="justify"> É biólogo (bacharel em Genética), mestrando em Genética pela Universidade Federal do Rio de Janeiro - UFRJ. Sua experiência concentra-se nas áreas de evolução molecular, filogenética, filogeografia, fotografia e edição de imagens. No CNCFlora desempenha a função de analista do Núcleo Lista Vermelha, participando de todos os processos envolvidos na análise de dados e avaliação de risco de extinção da flora brasileira, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ele ainda é curador do banco de imagens e responsável pelos registros fotográficos durante as oficinas, reuniões e expedições à campo. Lucas adora fotografar, tomar cerveja e falar sobre os grandes mistérios da humanidade! <br/><br/><br/>
   <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4407910Y7" target="_blank">Currículo lattes</a></strong><br/>
   <strong>Email:</strong> lucasmoraes@cncflora.net
   </p>
@@ -162,8 +171,8 @@
 <div class="item">
   <h3>Marcio Verdi</h3>
   <img src="{{static_url}}/images/equipe/Marcio.jpg"/>
-  <p align="justify"> É biólogo, mestre em Botânica pela Universidade Federal Rio Grande Sul - UFRGS (2013). Sua experiência concentra-se na área de botânica e ecologia, com ênfase em modelagem ecológica e em inventários florísticos e florestais para a avaliação e conservação da biodiversidade. No CNCFlora é analista e coordenador substituto do Núcleo Planejamento de Ações, onde participa de todos os processos envolvidos na elaboração de estratégias de conservação para a flora ameaçada de extinção, da organização de livros, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ele ainda é curador do banco de imagens, responsável pela divulgação nas redes sociais e pela coleta e determinação do material botânico durante as expedições à campo. Verdi adora coletar e fotografar plantas, andar de bicicleta, tomar chimarrão e cervejas artesanais!<br/><br/>
-  <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4251351Y9" target="_blank">Currículo lattes</a></strong><br/>
+  <p align="justify"> É biólogo, mestre em Botânica pela Universidade Federal do Rio Grande do Sul - UFRGS (2013). Sua experiência concentra-se na área de botânica e ecologia, com ênfase em modelagem ecológica e em inventários florísticos e florestais para a avaliação e conservação da biodiversidade. No CNCFlora é analista e coordenador substituto do Núcleo Planejamento de Ações, onde participa de todos os processos envolvidos na elaboração de estratégias de conservação para a flora ameaçada de extinção, da organização de livros, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ele ainda é curador do banco de imagens e responsável pela coleta e determinação do material botânico durante as expedições à campo. Verdi adora coletar e fotografar plantas, andar de bicicleta, tomar chimarrão e cervejas artesanais!
+    <br/><br/><strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4251351Y9" target="_blank">Currículo lattes</a></strong><br/>
   <strong>Email:</strong> verdi@cncflora.net
     </p>
 </div>
@@ -171,7 +180,7 @@
   <h3>Marta Moraes</h3>
   <img src="{{static_url}}/images/equipe/Marta.jpg"/>
   <p align="justify"> É bióloga (bacharel em Ecologia) pela Universidade Federal do Rio de Janeiro - UFRJ (1985). Sua experiência concentra-se na área de botânica, com ênfase em taxonomia de Orchidaceae, na coordenação do orquidário, da coleção viva de orquídeas e da coleção em meio líquido do Herbário RB do Jardim Botânico do Rio de Janeiro. No CNCFlora desempenha a função de analista do Núcleo Lista Vermelha, participando de todos os processos envolvidos na análise de dados e avaliação de risco de extinção da flora brasileira, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Também participa de expedições à campo e é curadora do banco de imagens. Martinha adora cantar e andar no mato!
-  <br /><br />
+  <br /><br /><br/>
   <strong><a href="http://lattes.cnpq.br/7277743500411035" target="_blank">Currículo lattes</a></strong><br/>
   <strong>Email:</strong> marta@cncflora.net
     </p>
