--- a/templates/content/pt-br/project/planejamento-de-acoes.html
+++ b/templates/content/pt-br/project/planejamento-de-acoes.html
@@ -164,6 +164,15 @@
   </div>
 
   <div class="item">
+      <img src="{{static_url}}/images/equipe/Duda.jpg"/>
+      <p align="justify"><strong>Eduardo Fernandez</strong>
+      é biólogo, mestre em Diversidade e Conservação de Plantas pela University of Reading, UK (2016). Sua experiência concentra-se nas áreas de botânica, ecologia da paisagem e fitogeografia, além de especialização em genética aplicada à conservação. Ainda, possui interesse em temas como biodiversidade de ecossistemas de montanhas tropicais e história evolutiva de vegetação campestre no neotrópico. No CNCFlora, desde 2010, desempenhava a função de analista do Núcleo Lista Vermelha e participava da organização e execução de expedições científicas à áreas prioritárias. Atualmente, é analista dos Núcleos Planejamento de Ações e Inventário Florístico em Áreas Prioritárias, onde participa de todos os processos envolvidos na elaboração de estratégias de conservação para a flora ameaçada de extinção, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ele ainda é responsável pela coleta e determinação do material botânico durante as expedições ao campo. Eduardo é boleiro de carteirinha, montanhista por natureza e assíduo devorador de livros das mais diferentes temáticas, principalmente filosofia e história natural.
+      <br />
+        <strong><a href="http://lattes.cnpq.br/0339764153484153" target="_blank">Currículo lattes</a></strong><br/>
+        <strong>Email:</strong> efernandez@cncflora.jbrj.gov.br</p>
+  </div>
+
+  <div class="item">
       <img src="{{static_url}}/images/equipe/Eline.jpg"/>
       <p align="justify"><strong>Eline Martins</strong>
       é bióloga, doutora em Botânica (Conservação da Natureza) pela Escola Nacional de Botânica Tropical - ENBT (2013). Sua experiência e interesses profissionais estão relacionados a conservação de espécies, com enfoque no desenvolvimento de estratégias de conservação para espécies ameaçadas de extinção e em genética da conservação. No CNCFlora desempenha a função de coordenadora técnico-científica e participa de todos os processos envolvidos na elaboração de projetos e de estratégias de conservação para a flora ameaçada de extinção, da organização de eventos e de livros, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Eline adora o contato com a natureza, ir à praia, praticar Yoga, andar de bicicleta, viajar e aproveitar a companhia dos afilhados!
@@ -175,14 +184,14 @@
   <div class="item">
       <img src="{{static_url}}/images/equipe/Marcio.jpg"/>
       <p align="justify"><strong>Marcio Verdi</strong>
-      é biólogo, mestre em Botânica pela Universidade Federal Rio Grande Sul - UFRGS (2013). Sua experiência concentra-se na área de botânica e ecologia, com ênfase em modelagem ecológica e em inventários florísticos e florestais para a avaliação e conservação da biodiversidade. No CNCFlora é analista e coordenador substituto do Núcleo Planejamento de Ações, onde participa de todos os processos envolvidos na elaboração de estratégias de conservação para a flora ameaçada de extinção, da organização de livros, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ele ainda é curador do banco de imagens, responsável pela divulgação nas redes sociais e pela coleta e determinação do material botânico durante as expedições à campo. Verdi adora coletar e fotografar plantas, andar de bicicleta, tomar chimarrão e cervejas artesanais!<Br />
-        <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4251351Y9" target="_blank">Currículo lattes</a></strong><br/>
+      é biólogo, mestre em Botânica pela Universidade Federal do Rio Grande do Sul - UFRGS (2013). Sua experiência concentra-se na área de botânica e ecologia, com ênfase em modelagem ecológica e em inventários florísticos e florestais para a avaliação e conservação da biodiversidade. No CNCFlora é analista e coordenador substituto do Núcleo Planejamento de Ações, onde participa de todos os processos envolvidos na elaboração de estratégias de conservação para a flora ameaçada de extinção, da organização de livros, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ele ainda é curador do banco de imagens e responsável pela coleta e determinação do material botânico durante as expedições à campo. Verdi adora coletar e fotografar plantas, andar de bicicleta, tomar chimarrão e cervejas artesanais!
+      <br/><strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4251351Y9" target="_blank">Currículo lattes</a></strong><br/>
         <strong>Email:</strong> verdi@cncflora.net
       </p>
   </div>
 
   <div class="item">
-      <img src="{{static_url}}/images/equipe/feminino.png"/>
+      <img src="{{static_url}}/images/equipe/Melissa.jpg"/>
       <p align="justify"><strong>Melissa Bocayuva</strong>
       é bióloga, doutora em Botânica pela Universidade Federal de Viçosa - UFV (2012) com pós-doutorado pela mesma universidade. Sua experiência concentra-se na área de botânica e microbiologia, com ênfase em taxonomia, ecologia e conservação de Orchidaceae, biologia e fisiologia dos microrganismos. No CNCFlora desempenha a função de analista do Núcleo Planejamento de Ações, participando de todos os processos envolvidos na elaboração de estratégias de conservação para a flora ameaçada de extinção, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Também participa de expedições à campo para coletar material botânico, identificar e registrar as ameaças incidentes sobre a flora. Melissa adora viajar, conhecer parques, plantar e curtir a natureza!
         <br/>
@@ -190,7 +199,7 @@
           <a href="http://lattes.cnpq.br/7258510578751609" target="_blank">Currículo lattes</a>
         </strong>
         <br />
-        <strong>Email:</strong> juliana@cncflora.net<br/>
+        <strong>Email:</strong> melissa@cncflora.net<br/>
       </p>
   </div>
 
@@ -205,12 +214,12 @@
   </div>
 
   <div class="item">
-      <img src="{{static_url}}/images/equipe/feminino.png"/>
+      <img src="{{static_url}}/images/equipe/Polyana.jpg"/>
       <p align="justify"><strong>Polyana Mendes Nogueira</strong>
       é engenheira florestal, mestranda na área de Biodiversidade em Unidades de Conservação pela Escola Nacional de Botânica Tropical - ENBT/JBRJ. Sua experiência está relacionada a geotecnologias aplicadas aos recursos naturais, licenciamento, execução e elaboração de projetos ambientais com foco na restauração florestal. No CNCFlora é pesquisadora colaboradora do Núcleo Planejamento de Ações, onde participa da elaboração de estratégias de conservação para a flora ameaçada de extinção. Poly adora estar em contato com a natureza, tomar banho de cachoeira, fazer trilhas, conhecer novos lugares e encontrar os amigos!
-      <br />
+      <br /><br />
         <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4496488J9" target="_blank">Currículo lattes</a></strong><br/>
-        <strong>Email:</strong> nina@cncflora.net
+        <strong>Email:</strong> polyana@florestal.eng.br
       </p>
   </div>
  </div>
