Alterando texto de ameaçadas na tela inicial.

--- a/templates/home.html
+++ b/templates/home.html
@@ -75,7 +75,7 @@
 
           <h6><a href=""> </a></h6>
           <p align="justify" style="font-size:15px">
-            <b>*</b>O número aqui apresentado é resultado do processo contínuo de avaliação de risco de extinção da Flora feito pelo CNCFlora em parceria com uma rede de especialistas. Porém, o número oficial de espécies ameaçadas é <u>2.113</u> que estão contempladas na "Lista Nacional Oficial de Espécies da Flora Ameaçadas de Extinção" <a href="http://cncflora.jbrj.gov.br/portal/static/pdf/portaria_mma_443_2014.pdf">(Portaria 443/2014)</a>.</p>
+            <b>*</b>O número aqui apresentado é resultado do processo contínuo de avaliação de risco de extinção da Flora feito pelo CNCFlora em parceria com uma rede de especialistas. Porém, considerando a "Lista Nacional Oficial de Espécies da Flora Ameaçadas de Extinção" <a href="http://cncflora.jbrj.gov.br/portal/static/pdf/portaria_mma_443_2014.pdf">(Portaria 443/2014)</a> temos 2.113 espécies ameaçadas no país.</p>
         </div>
       </section>
 
